--- a/proyecto inicio/index.html
+++ b/proyecto inicio/index.html
@@ -1,132 +1,176 @@
 <!DOCTYPE html>
 <html lang="es">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- <style> 
+    h1{
+    color:red;
+    background-color: yellow;
+}-->
+    <link rel="preload" href="./css/style.css" as="style" />
+    <link href="css/style.css" rel="stylesheet" />
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tu Carrera Digital </title>
-</head>
+    <title>Tu Carrera Digital</title>
+  </head>
 
-<body>
-    <h2>
-        Tu carrera digital
-    </h2>
-    <main>
-        <h1>
-            Descubre la formacion que te dara la oportunidad de convertirte en un profesional digital
-        </h1>
-        <a href="">
-            VER CURSOS
-        </a>
-    </main>
-    <section>
-
-        <h2>
-            <strong>
-                CURSOS
-            </strong>
-        </h2>
-        <h2>
-            <strong>CAMBIA TU FUTURO</strong>
-        </h2>
-        <a href="">
-            VER TODO
-        </a>
-
-        <a href="">
-            MADRID
-        </a>
-        <h2>
-            PROGRAMACIÓN DE VIDEOJUEGOS, DISEÑO 3D Y REALIDAD VIRTUAL
-        </h2>
-        <a href="">
-            INSCRIBIRME
-        </a>
-        <h2>
-            PROGRAMACION WEB FULL STACK
-        </h2>
-        <a href="">
-            INSCRIBIRME
-        </a>
-        <h2>
-            MARKETING DIGITAL
-        </h2>
-        <a href="">
-            INSCRIBIRME
-        </a>
-    </section>
-    <section>
-        <h3>
-            <strong>
-                ¿ te interesa algun otro curso en tu ciudad?
-            </strong>
-        </h3>
-        <a href="">
-            !PIDENOSLO!
-        </a>
-        <h2>
-            ¿PARA QUIEN SON ESTOS CURSOS?
-        </h2>
-        <p>
-            Cuando eliges un curso en Tu carrera Digital, estas dando el paso definitivo hacia las profesiones con
-            mas demanda del momento, como Marketing Digital, Desarrollo Web Full
-            Stack y Programacion de Videojuegos,Diseño 3D y Realidad Virtual .Nosotros te ofrecemos formacion con
-            docentes
-            expertos y contenidos alineados a las necesidades de las empresas
-            Queremos que saques el maximo partido a estos cursos y que te potencies tus
-            posibilidades de encontrar empleo
-        </p>
-        <b>
-            PARA PARTICIPAR, NECESITARÁS ESTAR INSCRITO EN GARANTÍA JUVENIL
-        </b>
-        <a href="">
-            IR A LA WEB DE GARANTIA JUVENIL
-        </a>
-        <b>
-            Descárgate esta infografía
-            en la que te mostramos cómo descargar tu certificado de Garantía Juvenil:
-        </b>
-        <a href="">
-            DESCARGAR INFOGRAFIA ADJUNTA
-        </a>
-        <a href="">
-            ¿Eres mayor de 16 años y menos de 30?
-            ¿Estas sin trabajar?
-        </a>
-    </section>
-    <h6>
-        DALE FORMA A TU FUTURO Y DESPEGA CON TU CARRERA DIGITAL
-    </h6>
-    <section>
-        <h2>
-            LOCALIZACIONES
-        </h2>
-        <p>
-            MADRID
-            CALLE DEL MARQUÉS DE AHUMADA 7 PLANTA BAJA AULA 15 28028, MADRID, MADRID.
-        </p>
-        <p>
-            MADRID
-            CALLE HOSPITAL 2 28012, MADRID, MADRID.</p>
-
-    </section>
-    <section>
-
-
-        <h3>
-            CONTACTAR
-         </h3>
-        <strong>
-            ¿TIENES DUDAS ? HABLA CON NOSOTROS :
-        </strong>
+  <body>
+    <!-- 
+    <section class="seccionPrueba">
+        <h3> Ejercicio selectores h3</h3>
+        <h5 class="h5azul">Ejercicio selectores h5</h5>
+        <p id=projo>Ejercicio selectores </p>
     </section>
 
+    <section class="ejercicioselector">
+        <h3 class="h3verde">verde</h3>
+        <h3 id="h3morado">morado</h3>
+        <h6>"primerh6"></h6>
+        <p>primer parrafo</p>
+        <img src="./img/11641893944_banner_zona_centro.png">
+        <a href="">primer enlace</a>
+        <a href="">segundo enlace</a>
+        <a href="">tercer enlace</a>
+    </section>-->
 
+    <header>
+      <nav>
+        <a href="https://www.tucarreradigital.es/zona-centro#cursos">Cursos</a>
+        <a href="https://www.tucarreradigital.es/sobre-nosotros"
+          >Sobre Nosotros</a
+        >
+        <a href="informate">Infórmate</a>
+      </nav>
+      <a href="#"><img src="img/" alt="" /> </a>
 
+      <h1>
+        Descubre la formación que te dará la oportunidad de convertirte en un
+        profesional digital
+      </h1>
+    </header>
 
-
-    <!-- <h1>Hola Mundo</h1>
-    <h2>Hola Mundo</h2>-->
-</body>
-
+    <a href="https://www.tucarreradigital.es/zona-centro#cursos">VER CURSOS</a>
+    <section>
+      <img src="img/Logos-oficiales.png" alt="Profesional digital" />
+    </section>
+    <section>
+      <h2>CURSOS</h2>
+      <h2>CAMBIA TU FUTURO</h2>
+      <a href="#">VER TODO</a>
+      <a href="#">MADRID</a>
+      <h2>PROGRAMACIÓN DE VIDEOJUEGOS, DISEÑO 3D Y REALIDAD VIRTUAL</h2>
+      <a
+        href="https://www.tucarreradigital.es/zona-centro/curso-programacion-de-videojuegos-diseno-3d-y-realidad-virtual#cursos"
+        >INSCRIBIRME</a
+      >
+      <h2>PROGRAMACIÓN WEB FULL STACK</h2>
+      <a
+        href="https://www.tucarreradigital.es/zona-centro/curso-programacion-web-full-stack#cursos"
+        >INSCRIBIRME</a
+      >
+      <h2>MARKETING DIGITAL</h2>
+      <a
+        href="https://www.tucarreradigital.es/zona-centro/curso-marketing-digital#cursos"
+        >INSCRIBIRME</a
+      >
+    </section>
+    <section>
+      <h3>¿Te interesa algún otro curso en tu ciudad?</h3>
+      <a href="#">¡PÍDENOSLO!</a>
+      <iframe
+        width="560"
+        height="315"
+        src="https://www.youtube.com/embed/SzZlMSDKE8o?si=BUwgIWtszykPdY3P"
+        title="YouTube video player"
+        frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        allowfullscreen
+      ></iframe>
+      <h2>¿PARA QUIÉN SON ESTOS CURSOS?</h2>
+      <p>
+        Cuando eliges un curso en Tu Carrera Digital, estás dando el paso
+        definitivo hacia las profesiones con más demanda del momento, como
+        Marketing Digital, Desarrollo Web Full Stack y Programación de
+        Videojuegos, Diseño 3D y Realidad Virtual. Nosotros te ofrecemos
+        formación con docentes expertos y contenidos alineados a las necesidades
+        de las empresas. Queremos que saques el máximo partido a estos cursos y
+        que aumentes tus posibilidades de encontrar empleo.
+      </p>
+      <p>
+        <strong
+          >PARA PARTICIPAR, NECESITARÁS ESTAR INSCRITO EN GARANTÍA
+          JUVENIL</strong
+        >
+      </p>
+      <a
+        href="https://www.sepe.es/HomeSepe/Personas/encontrar-trabajo/Garantia-Juvenil/que-es-garantia-juvenil"
+        >IR A LA WEB DE GARANTÍA JUVENIL</a
+      >
+      <p>
+        <strong
+          >Descárgate esta infografía en la que te mostramos cómo descargar tu
+          certificado de Garantía Juvenil:</strong
+        >
+      </p>
+      <a href="https://www.tucarreradigital.es/assets/Infografía-S.G.J.pdf"
+        >DESCARGAR INFOGRAFÍA ADJUNTA</a
+      >
+      <a href="https://www.tucarreradigital.es/zona-centro#cursos"
+        >¿Eres mayor de 16 años y menos de 30? ¿Estás sin trabajar?</a
+      >
+    </section>
+    <section>
+      <h2>LOCALIZACIONES</h2>
+      <p>
+        MADRID CALLE DEL MARQUÉS DE AHUMADA 7 PLANTA BAJA AULA 15 28028, MADRID,
+        MADRID.
+      </p>
+      <p>MADRID CALLE HOSPITAL 2 28012, MADRID, MADRID.</p>
+    </section>
+    <section>
+      <h3>CONTACTAR</h3>
+      <strong>¿TIENES DUDAS? HABLA CON NOSOTROS:</strong>
+      <p>LLÁMANOS:</p>
+      <a href="tel:638024408">638024408</a>
+      <img src="img/ico-EMAIL.png" />
+      <p>Escríbenos:</p>
+      <img src="img/ico-EMAIL.png" />
+      <a href="patric.departearroyo@adecco.com"
+        >patric.departearroyo@adecco.com</a
+      >
+    </section>
+    <footer>
+      <a href="#">ZONA-CENTRO</a>
+      <a href="https://www.tucarreradigital.es/sobre-nosotros"
+        >Sobre Nosotros</a
+      >
+      <a href="https://www.tucarreradigital.es/preguntas-frecuentes"
+        >Preguntas Frecuentes (FAQ)</a
+      >
+      <a href="https://www.tucarreradigital.es/zona-centro/politica-de-cookies"
+        >Política de Cookies</a
+      >
+      <a
+        href="https://www.tucarreradigital.es/zona-centro/politica-de-privacidad"
+        >Política de Privacidad</a
+      >
+      <a href="https://www.tucarreradigital.es/zona-centro/aviso-legal"
+        >Aviso Legal</a
+      >
+    </footer>
+    <form>
+      <fieldset>
+        <legend>Título del formulario</legend>
+        <label>Nombre y Apellidos</label>
+        <input type="text" placeholder="Escribe aquí tu nombre" required />
+        <label>Teléfono</label>
+        <input type="tel" placeholder="Llámanos ya" />
+        <label>Email</label>
+        <input type="email" placeholder="Tu email" />
+        <input type="submit" value="Enviar ya de ya" />
+      </fieldset>
+    </form>
+    <img src="img/CTA-informate.png" />
+    <img src="img/up-top.png" />
+  </body>
 </html>
